--- a/src/aview/sample.fxml
+++ b/src/aview/sample.fxml
@@ -4,29 +4,23 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0" minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <VBox prefHeight="114.0" prefWidth="800.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0"
+            minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16"
+            fx:controller="controller.DataController">
+    <top>
+        <VBox prefHeight="114.0" prefWidth="800.0" spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <MenuBar>
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="Close"/>
+                            </items>
+                        </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
                     <MenuItem mnemonicParsing="false" text="Delete" />
@@ -51,14 +45,14 @@
       </VBox>
    </top>
    <center>
-      <LineChart prefWidth="623.0" BorderPane.alignment="CENTER">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
+       <LineChart fx:id="linechart" prefWidth="623.0" BorderPane.alignment="CENTER">
+           <xAxis>
+               <CategoryAxis side="BOTTOM"/>
+           </xAxis>
+           <yAxis>
+               <NumberAxis side="LEFT"/>
+           </yAxis>
+       </LineChart>
    </center>
    <left>
       <Region prefHeight="368.0" prefWidth="60.0" BorderPane.alignment="CENTER" />
@@ -72,21 +66,29 @@
    </right>
    <bottom>
       <VBox prefHeight="70.0" prefWidth="800.0" BorderPane.alignment="CENTER">
-         <children>
-            <Region prefHeight="200.0" prefWidth="800.0" />
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="2.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Visit project code on">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Text>
-                  <Hyperlink text="GitHub">
-                     <padding>
+          <children>
+              <HBox prefHeight="100.0" prefWidth="200.0">
+                  <children>
+                      <Region prefHeight="25.0" prefWidth="592.0"/>
+                      <Button fx:id="button" mnemonicParsing="false" onAction="#initialize" prefHeight="25.0"
+                              prefWidth="198.0" text="Initialize"/>
+                  </children>
+              </HBox>
+              <Region prefHeight="200.0" prefWidth="800.0"/>
+              <HBox prefHeight="100.0" prefWidth="200.0" spacing="2.0">
+                  <children>
+                      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Visit project code on">
+                          <HBox.margin>
+                              <Insets left="10.0"/>
+                          </HBox.margin>
+                      </Text>
+                      <Hyperlink text="GitHub">
+                          <padding>
                         <Insets bottom="10.0" />
                      </padding>
                   </Hyperlink>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="." />
+                      <Region prefHeight="29.0" prefWidth="462.0"/>
                </children>
             </HBox>
          </children>
