--- a/src/aview/sample.fxml
+++ b/src/aview/sample.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0"
-            minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16"
+            minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx"
             fx:controller="controller.DataController">
     <top>
         <VBox prefHeight="114.0" prefWidth="800.0" spacing="10.0" BorderPane.alignment="CENTER">
