--- a/src/main/resources/com/prolificdev/fxml/secondary.fxml
+++ b/src/main/resources/com/prolificdev/fxml/secondary.fxml
@@ -3,13 +3,20 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0"
-            minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx"
-            fx:controller="controller.DataController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0" minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.prolificdev.controllers.SecondaryController">
     <top>
         <VBox prefHeight="114.0" prefWidth="800.0" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
@@ -17,7 +24,7 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Close"/>
+                                <MenuItem mnemonicParsing="false" text="Close" />
                             </items>
                         </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
@@ -44,12 +51,12 @@
       </VBox>
    </top>
    <center>
-       <LineChart fx:id="lineChart" prefWidth="623.0" stylesheets="@chart.css" BorderPane.alignment="CENTER">
+       <LineChart fx:id="lineChart" stylesheets="@../css/chart.css" BorderPane.alignment="CENTER">
            <xAxis>
-               <NumberAxis label="x-Axis" side="BOTTOM" upperBound="1.0" fx:id="xAxis"/>
+               <NumberAxis label="x-Axis" side="BOTTOM" upperBound="1.0" fx:id="xAxis" />
            </xAxis>
            <yAxis>
-               <NumberAxis fx:id="yAxis" label="y-Axis" side="LEFT" upperBound="1.0"/>
+               <NumberAxis fx:id="yAxis" label="y-Axis" side="LEFT" upperBound="1.0" />
            </yAxis>
        </LineChart>
    </center>
@@ -68,17 +75,16 @@
           <children>
               <HBox prefHeight="100.0" prefWidth="200.0">
                   <children>
-                      <Region prefHeight="25.0" prefWidth="592.0"/>
-                      <Button fx:id="button" mnemonicParsing="false" onAction="#initialize" prefHeight="25.0"
-                              prefWidth="198.0" text="Initialize"/>
+                      <Region prefHeight="25.0" prefWidth="592.0" />
+                      <Button fx:id="initButton" mnemonicParsing="false" onAction="#initialize" prefHeight="25.0" prefWidth="198.0" text="Initialize" />
                   </children>
               </HBox>
-              <Region prefHeight="200.0" prefWidth="800.0"/>
+              <Region prefHeight="200.0" prefWidth="800.0" />
               <HBox prefHeight="100.0" prefWidth="200.0" spacing="2.0">
                   <children>
                       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Visit project code on">
                           <HBox.margin>
-                              <Insets left="10.0"/>
+                              <Insets left="10.0" />
                           </HBox.margin>
                       </Text>
                       <Hyperlink text="GitHub">
@@ -87,7 +93,8 @@
                      </padding>
                   </Hyperlink>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="." />
-                      <Region prefHeight="29.0" prefWidth="462.0"/>
+                      <Region prefHeight="29.0" prefWidth="563.0" />
+                  <Button fx:id="switchToPrimaryButton" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="25.0" prefWidth="60.0" text="Exit" />
                </children>
             </HBox>
          </children>
