--- a/src/main/resources/com/prolificdev/fxml/secondary.fxml
+++ b/src/main/resources/com/prolificdev/fxml/secondary.fxml
@@ -3,20 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0" minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.prolificdev.controllers.SecondaryController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="530.0"
+            minWidth="800.0" prefHeight="530.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16"
+            fx:controller="com.prolificdev.controller.SecondaryController">
     <top>
         <VBox prefHeight="114.0" prefWidth="800.0" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
@@ -24,7 +17,7 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
+                                <MenuItem mnemonicParsing="false" text="Close"/>
                             </items>
                         </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
